--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+app_entry:
+  path: '/{req}'
+  defaults: { _controller: App\Controller\EntryController::index }
+  requirements:
+    req: "^((?!api).)*$"
